Add .gitignore file

--- a/.env
+++ b/.env
@@ -1,19 +1,31 @@
+# --- DATABASE CONFIG ---
+# Chỉ dùng cho local:
 DATABASE_URL=postgresql://postgres:13579@localhost:5432/Spa1
 
-SECRET_KEY=super-secret-key
-JWT_SECRET_KEY=my-jwt-secret
+# --- SECURITY ---
+SECRET_KEY=super-secret-key-local-replace-me-in-prod
+JWT_SECRET_KEY=my-jwt-secret-local-replace-me-in-prod
 
+# --- MAIL (GMAIL SMTP) ---
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USERNAME=dangkhoa18052004qni@gmail.com
-MAIL_PASSWORD=xkyu hgtw odsg osks         
+MAIL_PASSWORD=xkyu hgtw odsg osks 
 MAIL_FROM=dangkhoa18052004qni@gmail.com
 
+# --- TWILIO (Optional) ---
+# TWILIO_SID=
+# TWILIO_AUTH_TOKEN=
+# TWILIO_FROM=
+
+# --- MOMO SANDBOX ---
 MOMO_PARTNER_CODE_SANDBOX=MOMOBKUN20180529
 MOMO_ACCESS_KEY_SANDBOX=klm05TvNBzhg7h7j
 MOMO_SECRET_KEY_SANDBOX=at67qH6mk8w5Y1nAyMoYKMWACiEi2bsa
 MOMO_API_ENDPOINT_SANDBOX=https://test-payment.momo.vn/v2/gateway/api/create
 
+# --- CALLBACK URLs (Local) ---
 YOUR_REDIRECT_URL=http://localhost:3000/payment-success
 YOUR_IPN_URL=https://anika-unfinical-kala.ngrok-free.dev/api/admin/payment-webhook
+YOUR_BASE_DOMAIN=http://127.0.0.1:5000
