Tích hợp Resend

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ SECRET_KEY=super-secret-key-local-replace-me-in-prod
 JWT_SECRET_KEY=my-jwt-secret-local-replace-me-in-prod
 
 # --- MAIL (GMAIL SMTP) ---
+RESEND_API_KEY=re_KtZubMnc_DgDfsaDxYUnJbDw7ADYphGNQ
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
