--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,31 @@
 # Python
-venv/
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
+*.py[cod]
+*$py.class
 *.so
-*.egg
-*.egg-info/
-dist/
-build/
+.Python
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Flask
+instance/
+.webassets-cache
 
 # IDE
 .vscode/
 .idea/
-
-# Environment
-.env
-.env.local
+*.swp
+*.swo
+.DS_Store
 
 # OS
-.DS_Store
 Thumbs.db
