--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ SECRET_KEY=super-secret-key-local-replace-me-in-prod
 JWT_SECRET_KEY=my-jwt-secret-local-replace-me-in-prod
 
 # --- MAIL (GMAIL SMTP) ---
-RESEND_API_KEY=re_KtZubMnc_DgDfsaDxYUnJbDw7ADYphGNQ
+RESEND_API_KEY=re_N24xBzoC_DirQZchRsbBPkjQfcsx3nWkz
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
@@ -15,10 +15,7 @@ MAIL_USERNAME=dangkhoa18052004qni@gmail.com
 MAIL_PASSWORD=xkyu hgtw odsg osks 
 MAIL_FROM=dangkhoa18052004qni@gmail.com
 
-# --- TWILIO (Optional) ---
-# TWILIO_SID=
-# TWILIO_AUTH_TOKEN=
-# TWILIO_FROM=
+
 
 # --- MOMO SANDBOX ---
 MOMO_PARTNER_CODE_SANDBOX=MOMOBKUN20180529
@@ -27,6 +24,6 @@ MOMO_SECRET_KEY_SANDBOX=at67qH6mk8w5Y1nAyMoYKMWACiEi2bsa
 MOMO_API_ENDPOINT_SANDBOX=https://test-payment.momo.vn/v2/gateway/api/create
 
 # --- CALLBACK URLs (Local) ---
-YOUR_REDIRECT_URL=http://localhost:3000/payment-success
-YOUR_IPN_URL=https://anika-unfinical-kala.ngrok-free.dev/api/admin/payment-webhook
-YOUR_BASE_DOMAIN=http://127.0.0.1:5000
+YOUR_IPN_URL=https://binspa.id.vn/api/admin/payment-webhook
+YOUR_REDIRECT_URL=https://binspa.id.vn/payment-success
+YOUR_BASE_DOMAIN=https://binspa.id.vn
